--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -53,14 +53,14 @@
         </button>
         <div class="collapse navbar-collapse " id="navbarNav" >
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="#">Twitter</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% static 'my_portfolio_1.png' %}">Resume</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'allblogs' %}">Blog</a>
+              <a class="nav-link active" href="#">Blog</a>
             </li>
           </ul>
         </div>
@@ -68,36 +68,23 @@
 </header>
 
 <main role="main">
-
-  <section class="jumbotron text-center">
-    <div class="container">
-      <h1>Hi, I'm Vipul Sharma</h1>
-      <p class="lead text-muted">Hi, I love to do coding of both frontend and backend.</p>
-      <p>
-        <a href="http:\\google.com" class="btn btn-primary my-2">Google Search</a>
-      </p>
-    </div>
-  </section>
-
-  <div class="album py-5 bg-light">
-    <div class="container">
-
-      <div class="row">
-        {% for job in jobs.all %}
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
-            <img class="bd-placeholder-img card-img-top" src="{{job.image.url}}" ></svg>
-            <div class="card-body">
-              <p class="card-text">{{ job.summary }}</p>
-            </div>
-          </div>
-        </div>
-        {% endfor %}
-
-      </div>
-    </div>
-  </div>
-
+<div class="container">
+  <h1 class='text-center'>Welcome to Vipul's Blog</h1>
+  <br />
+  <br />
+  <h2>Latest Blogs</h2>
+  <hr />
+{% for blog in blogs.all %}
+<a href='{% url 'detail' blog.id %}'><h3>{{blog.title}}</h3></a>
+<br />
+{{blog.pub_date_pretty}}
+<br />
+<img class="img-fluid" src="{{blog.image.url}}" height=200 width=300 />
+<br />
+<p>{{blog.summary}}</p>
+<br />
+{% endfor %}
+</div>
 </main>
 
 <footer class="text-muted">
