--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -68,36 +68,17 @@
 </header>
 
 <main role="main">
+<div class="container text-center">
 
-  <section class="jumbotron text-center">
-    <div class="container">
-      <h1>Hi, I'm Vipul Sharma</h1>
-      <p class="lead text-muted">Hi, I love to do coding of both frontend and backend.</p>
-      <p>
-        <a href="http:\\google.com" class="btn btn-primary my-2">Google Search</a>
-      </p>
-    </div>
-  </section>
-
-  <div class="album py-5 bg-light">
-    <div class="container">
-
-      <div class="row">
-        {% for job in jobs.all %}
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
-            <img class="bd-placeholder-img card-img-top" src="{{job.image.url}}" ></svg>
-            <div class="card-body">
-              <p class="card-text">{{ job.summary }}</p>
-            </div>
-          </div>
-        </div>
-        {% endfor %}
-
-      </div>
-    </div>
-  </div>
-
+<a href='#'><h3>{{blog.title}}</h3></a>
+<br />
+{{blog.pub_date_pretty}}
+<br />
+<img class="img-fluid" src="{{blog.image.url}}" height=400 width=600 />
+<br />
+<p>{{blog.body}}</p>
+<br />
+</div>
 </main>
 
 <footer class="text-muted">
